Kubernetes/Kubernetes-manifest/devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-processor
  namespace: uat-knowhow
  labels:
    app: devops-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-processor
  template:
    metadata:
      labels:
        app: devops-processor
    spec:
      # initContainers:
      # - name: init-mongodb
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup mongodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mongodb; sleep 2; done"]
      # - name: init-customapi
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
      containers:
      - name: devops-processor
        image: speedtools.azurecr.io/knowhow-devops-processor:8.3.2-SNAPSHOT
        imagePullPolicy: Always
        env:
            - name: spring.data.mongodb.uri
              valueFrom:
                secretKeyRef:
                  name: uatknhdbconnectionstring
                  key: uatknhdbconnectionstring
            - name: spring.data.mongodb.host
              valueFrom:
                secretKeyRef:
                  name: uatknhdbhost
                  key: uatknhdbhost
            
            - name: aesEncryptionKey
              valueFrom:
                secretKeyRef:
                  name: knowhowaesencryptionkeynew
                  key: knowhowaesencryptionkeynew
            - name: auth.secret
              valueFrom:
                secretKeyRef:
                  name: knowhow-auth-secret
                  key: knowhow-auth-secret
            - name: spring.data.mongodb.username
              valueFrom:
                secretKeyRef:
                  name: uatknhdbusername
                  key: uatknhdbusername
            - name: spring.data.mongodb.password
              valueFrom:
                secretKeyRef:
                  name: uatknhdbpassword
                  key: uatknhdbpassword
            - name: mongock.migration-scan-package
              value: com.publicissapient.kpidashboard.apis.mongock.installation
        envFrom:
        - configMapRef:
            name: knowhow-config
        resources:
          requests:
            memory: "3Gi"
            cpu: "1"
        ports:
        - containerPort: 50001
        - containerPort: 50002
        - containerPort: 50003
        - containerPort: 50006
        - containerPort: 50007
        - containerPort: 50011
        - containerPort: 50012
        - containerPort: 50014
        - containerPort: 50019
        - containerPort: 50020
        - containerPort: 50022

        volumeMounts:
            - name: knowhow-secrets-store
              mountPath: "/mnt/uat-secrets-store"
              readOnly: true
      volumes:
        - name: knowhow-secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "uat-secretproviderclass"

---

apiVersion: v1
kind: Service
metadata:
  name: devops-processor
  namespace: uat-knowhow
spec:
  selector:
    app: devops-processor
  ports:
    - protocol: TCP
      port: 50001
      targetPort: 50001
      name: zephyr
    - protocol: TCP
      port: 50002
      targetPort: 50002
      name: bamboo
    - protocol: TCP
      port: 50003
      targetPort: 50003
      name: bitbucket
    - protocol: TCP
      port: 50006
      targetPort: 50006
      name: excel
    - protocol: TCP
      port: 50007
      targetPort: 50007
      name: jenkins
    - protocol: TCP
      port: 50011
      targetPort: 5001
      name: sonar
    - protocol: TCP
      port: 50012
      targetPort: 50012
      name: teamcity
    - protocol: TCP
      port: 50014
      targetPort: 50014
      name: gitlab
    - protocol: TCP
      port: 50019
      targetPort: 50019
      name: github
    - protocol: TCP
      port: 50020
      targetPort: 50020
      name: jiratest
    - protocol: TCP
      port: 50022
      targetPort: 50022
      name: githubaction
