Kubernetes/Kubernetes-manifest/ingress-stage-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-tools-publicos-sapient-com
  name: argocd 
  namespace: stage-build
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: argocdspeedtool.tools.publicis.sapient.com 
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - ip: 13.94.97.252
