Kubernetes/Kubernetes-manifest/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowhow-ui
  namespace: uat-knowhow
  labels:
    app: knowhow-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knowhow-ui
  template:
    metadata:
      labels:
        app: knowhow-ui
    spec:
      # initContainers:
      # - name: init-mongodb
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup mongodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mongodb; sleep 2; done"]
      # - name: init-customapi
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
      # - name: init-knowhow-ui
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup knowhow-ui-knowhow.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for knowhow-ui; sleep 2; done"]
      containers:
      - name: knowhow-ui
        image: speedtools.azurecr.io/knowhow-ui:8.3.2-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        # - containerPort: 443
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 443
        #     scheme: HTTPS
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 443
        #     scheme: HTTPS
        #   initialDelaySeconds: 15
        #   periodSeconds: 10
        env:
          - name: API_HOST
            value: customapi
          - name: API_PORT
            value: "8080"
          - name: ENVIRONMENT
            value: "prod"
          - name: CENTRAL_LOGIN_URL
            value: "https://stage-authnauth.tools.publicis.sapient.com"
          - name: MAP_URL
            value: "https://stage-assessmentplatform.tools.publicis.sapient.com"
          - name: RETROS_URL
            value: "https://stage-retrospective.tools.publicis.sapient.com"
---
apiVersion: v1
kind: Service
metadata:
  name: knowhow-ui
  namespace: uat-knowhow
spec:
  selector:
    app: knowhow-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    # - name: https  # Name for the HTTPS port
    #   protocol: TCP
    #   port: 443
    #   targetPort: 443

---
