Kubernetes/Kubernetes-manifest/zookeeper.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: stage-knowhow
spec:
  replicas: 1
  serviceName: zookeeper-cluster
  selector:
    matchLabels:
      app: zookeeper-cluster
  template:
    metadata:
      labels:
        component: zookeeper-cluster
        app: zookeeper-cluster
    spec:
      containers:
      - name: zookeeper
        image: bitnami/zookeeper:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 2181
        - containerPort: 2888
        - containerPort: 3888
        resources:
          requests:
           memory: "124Mi"
           cpu: "0.1"
          limits:
            memory: "248Mi"
            cpu: "0.3"
        lifecycle:
          postStart:
            exec:
              command:
                - "sh"
                - "-c"
                - >
                  echo $(( $(cat /etc/hosts | grep zookeeper | awk '{print($3)}' | awk '{split($0,array,"-")} END{print array[3]}') + 1 )) > /bitnami/zookeeper/data/myid
        env:
        - name: ALLOW_ANONYMOUS_LOGIN
          value: "yes"
        envFrom:
          - configMapRef:
              name: knowhow-config


---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-cluster
  namespace: stage-knowhow
spec:
  selector:
    app: zookeeper-cluster
  ports:
  - name: client
    port: 2181
    targetPort: 2181
  - name: follower
    port: 2888
    targetPort: 2888
  - name: leader
    port: 3888
    targetPort: 3888
  clusterIP: None
